shesmu-server/src/test/resources/bad/cycle1.shesmu
Input gsi_std;

Define standard_execution()
  Call standard_execution();
